# pseudocod

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  README.md  build.ps1  build.sh  errors.h  firsthelloworld.txt  interpret.cpp  interpreter.h  lexer.h  parser.h
src/: errors.hpp  interpret.cpp  interpreter.hpp  lexer.hpp  parser.hpp
